// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsProfilePage should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname=""
      >
        Profile
      </mock-styled.h1>
      <form>
        <div
          class="el-mb11"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="name"
                  placeholder="Your full name here"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="jobTitle"
                  placeholder="What role do you have at your company"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Job Title
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="gitHubUsername"
                  placeholder="Github handles help us tracking issues"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  GitHub Username
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <div
          class="el-mb11"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.h2
                classname="el-has-no-margin"
              >
                Company Name
              </mock-styled.h2>
              <mock-styled.p
                classname="el-has-grey-text el-has-no-margin"
              >
                MOCK_COMPANY
              </mock-styled.p>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.h2
                classname="el-has-no-margin"
              >
                Email Address
              </mock-styled.h2>
              <mock-styled.p
                classname="el-has-grey-text el-has-no-margin"
              >
                example@email.com
              </mock-styled.p>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.h2
                classname="el-has-no-margin"
              >
                Profile Settings
              </mock-styled.h2>
              <mock-styled.p
                classname="el-has-grey-text el-has-no-margin"
              />
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.h2
          classname="el-has-no-margin"
        >
          Customer Data
        </mock-styled.h2>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          You can choose which sandbox you wish to view based on your Reapit Product. This is specific and only associated to your developer profile.
        </mock-styled.p>
        <mock-styled.div
          classname="el-mb6"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="el-has-grey-bg"
              />
              <mock-styled.label>
                Choose Sandbox
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-mb11 el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <mock-styled.span
              classname="el-icon-new"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                style="font-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </div>
          <div
            class="el-pn-content"
          >
            Please note, you will need to log out and log back in again to see this change take effect
          </div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="el-intent-primary"
              disabled="false"
              type="submit"
            >
              <mock-styled.div />
              Save Changes
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.button
          classname="el-floating-button el-intent-primary"
        >
          <mock-styled.div />
          <mock-styled.span
            classname="el-icon-new"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname=""
    >
      Profile
    </mock-styled.h1>
    <form>
      <div
        class="el-mb11"
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="name"
                placeholder="Your full name here"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="jobTitle"
                placeholder="What role do you have at your company"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Job Title
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="gitHubUsername"
                placeholder="Github handles help us tracking issues"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                GitHub Username
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <div
        class="el-mb11"
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.h2
              classname="el-has-no-margin"
            >
              Company Name
            </mock-styled.h2>
            <mock-styled.p
              classname="el-has-grey-text el-has-no-margin"
            >
              MOCK_COMPANY
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.h2
              classname="el-has-no-margin"
            >
              Email Address
            </mock-styled.h2>
            <mock-styled.p
              classname="el-has-grey-text el-has-no-margin"
            >
              example@email.com
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.h2
              classname="el-has-no-margin"
            >
              Profile Settings
            </mock-styled.h2>
            <mock-styled.p
              classname="el-has-grey-text el-has-no-margin"
            />
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <mock-styled.h2
        classname="el-has-no-margin"
      >
        Customer Data
      </mock-styled.h2>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        You can choose which sandbox you wish to view based on your Reapit Product. This is specific and only associated to your developer profile.
      </mock-styled.p>
      <mock-styled.div
        classname="el-mb6"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.div
              classname="el-has-grey-bg"
            />
            <mock-styled.label>
              Choose Sandbox
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="el-mb11 el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <mock-styled.span
            classname="el-icon-new"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              style="font-size: 1.25rem;"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </div>
        <div
          class="el-pn-content"
        >
          Please note, you will need to log out and log back in again to see this change take effect
        </div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.button
            classname="el-intent-primary"
            disabled="false"
            type="submit"
          >
            <mock-styled.div />
            Save Changes
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </form>
    <mock-styled.div
      classname=""
    />
    <mock-styled.div
      classname=""
    >
      <mock-styled.button
        classname="el-floating-button el-intent-primary"
      >
        <mock-styled.div />
        <mock-styled.span
          classname="el-icon-new"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsProfilePage should match snapshot for mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <mock-styled.div />
      <mock-styled.h1
        classname=""
      >
        Profile
      </mock-styled.h1>
      <form>
        <div
          class="el-mb11"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="name"
                  placeholder="Your full name here"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="jobTitle"
                  placeholder="What role do you have at your company"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Job Title
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="gitHubUsername"
                  placeholder="Github handles help us tracking issues"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  GitHub Username
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <div
          class="el-mb11"
        >
          <mock-styled.div
            classname=""
          >
            <mock-styled.div>
              <mock-styled.h2
                classname="el-has-no-margin"
              >
                Company Name
              </mock-styled.h2>
              <mock-styled.p
                classname="el-has-grey-text el-has-no-margin"
              >
                MOCK_COMPANY
              </mock-styled.p>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.h2
                classname="el-has-no-margin"
              >
                Email Address
              </mock-styled.h2>
              <mock-styled.p
                classname="el-has-grey-text el-has-no-margin"
              >
                example@email.com
              </mock-styled.p>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.h2
                classname="el-has-no-margin"
              >
                Profile Settings
              </mock-styled.h2>
              <mock-styled.p
                classname="el-has-grey-text el-has-no-margin"
              />
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.h2
          classname="el-has-no-margin"
        >
          Customer Data
        </mock-styled.h2>
        <mock-styled.p
          classname="el-has-grey-text"
        >
          You can choose which sandbox you wish to view based on your Reapit Product. This is specific and only associated to your developer profile.
        </mock-styled.p>
        <mock-styled.div
          classname="el-mb6"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.div
                classname="el-has-grey-bg"
              />
              <mock-styled.label>
                Choose Sandbox
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
        <mock-styled.div
          classname="el-mb11 el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <mock-styled.span
              classname="el-icon-new"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                style="font-size: 1.25rem;"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </div>
          <div
            class="el-pn-content"
          >
            Please note, you will need to log out and log back in again to see this change take effect
          </div>
        </mock-styled.div>
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="el-intent-primary"
              disabled="false"
              type="submit"
            >
              <mock-styled.div />
              Save Changes
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <mock-styled.div
        classname=""
      />
      <mock-styled.div
        classname=""
      >
        <mock-styled.button
          classname="el-floating-button el-intent-primary"
        >
          <mock-styled.div />
          <mock-styled.span
            classname="el-icon-new"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <mock-styled.h1
      classname=""
    >
      Profile
    </mock-styled.h1>
    <form>
      <div
        class="el-mb11"
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="name"
                placeholder="Your full name here"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="jobTitle"
                placeholder="What role do you have at your company"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Job Title
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="gitHubUsername"
                placeholder="Github handles help us tracking issues"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                GitHub Username
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <div
        class="el-mb11"
      >
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.h2
              classname="el-has-no-margin"
            >
              Company Name
            </mock-styled.h2>
            <mock-styled.p
              classname="el-has-grey-text el-has-no-margin"
            >
              MOCK_COMPANY
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.h2
              classname="el-has-no-margin"
            >
              Email Address
            </mock-styled.h2>
            <mock-styled.p
              classname="el-has-grey-text el-has-no-margin"
            >
              example@email.com
            </mock-styled.p>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.h2
              classname="el-has-no-margin"
            >
              Profile Settings
            </mock-styled.h2>
            <mock-styled.p
              classname="el-has-grey-text el-has-no-margin"
            />
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <mock-styled.h2
        classname="el-has-no-margin"
      >
        Customer Data
      </mock-styled.h2>
      <mock-styled.p
        classname="el-has-grey-text"
      >
        You can choose which sandbox you wish to view based on your Reapit Product. This is specific and only associated to your developer profile.
      </mock-styled.p>
      <mock-styled.div
        classname="el-mb6"
      >
        <mock-styled.div>
          <mock-styled.div>
            <mock-styled.div
              classname="el-has-grey-bg"
            />
            <mock-styled.label>
              Choose Sandbox
            </mock-styled.label>
          </mock-styled.div>
        </mock-styled.div>
      </mock-styled.div>
      <mock-styled.div
        classname="el-mb11 el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <mock-styled.span
            classname="el-icon-new"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              style="font-size: 1.25rem;"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2Zm1.143 15.714h-2.286v-6h2.286v6Zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428Z"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </div>
        <div
          class="el-pn-content"
        >
          Please note, you will need to log out and log back in again to see this change take effect
        </div>
      </mock-styled.div>
      <mock-styled.div>
        <mock-styled.div
          classname=""
        >
          <mock-styled.button
            classname="el-intent-primary"
            disabled="false"
            type="submit"
          >
            <mock-styled.div />
            Save Changes
          </mock-styled.button>
        </mock-styled.div>
      </mock-styled.div>
    </form>
    <mock-styled.div
      classname=""
    />
    <mock-styled.div
      classname=""
    >
      <mock-styled.button
        classname="el-floating-button el-intent-primary"
      >
        <mock-styled.div />
        <mock-styled.span
          classname="el-icon-new"
        >
          <svg
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2ZM4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2Zm16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2Z"
              fill="currentColor"
            />
          </svg>
        </mock-styled.span>
      </mock-styled.button>
    </mock-styled.div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
